[package]
name = "gitevents-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.1"
vercel_lambda = "*"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde_json = "1.0.91"
dotenv = "0.15.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.38"

  [dependencies.serde]
  version = "1.0.150"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.11"
  features = [ "json" ]

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]

[[bin]]
name = "gitevents-discord"
path = "/Users/framp/projects/gitevents-discord-bot/api/gitevents-discord.rs"

[lib]
name = "lib"
path = "_lib.rs"
